--- a/components/d0stb0630-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/d0stb0630-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d0stb0630-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c024a4276c.iw9z.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:88743d6fea5bbf2190ee6a61f592347bbe0154ca@sha256:c2d2ca85aa8b83a972d14d40ed251f15c47079d41d80f79f84fdba8fea81169a
+          name: container-image
